--- a/package.json
+++ b/package.json
@@ -8,8 +8,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
+    "@mdi/js": "^7.4.47",
+    "axios": "^1.7.3",
+    "chart.js": "^4.4.4",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "mdi-vue": "^3.0.13",
+    "router": "^1.3.8",
+    "socket.io": "^4.8.0",
+    "socket.io-client": "^4.8.0",
+    "vue": "^3.4.37",
+    "vue-axios": "^3.5.2",
+    "vue-i18n": "^10.0.1",
+    "vue-router": "^4.4.3",
+    "vuetify": "^3.7.1",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -18,7 +31,8 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "material-design-icons-iconfont": "^6.7.0"
   },
   "eslintConfig": {
     "root": true,
